feat: user monitoring system and improve the UI interface
